samed-guener-portfolio-chart/templates/portfolio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samed-guener-portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: buzzle.io
    http:
      paths:
      - path: /
        backend:
          serviceName: samed-guener-portfolio-service
          servicePort: 80
  - host: samedguener.com
    http:
      paths:
      - path: /
        backend:
          serviceName: samed-guener-portfolio-service
          servicePort: 80
  - host: samedguener.de
    http:
      paths:
      - path: /
        backend:
          serviceName: samed-guener-portfolio-service
          servicePort: 80
